# federated-learning

./: .gitignore  client.py  docker-compose.yml  final_global_model.pkl  init_datasets.sh  requirement.txt  run_federated_learning.sh  server.py  visualize_communication_cost.ipynb  visualize_results.py
fl-thesis/: .dockerignore  DOKUMENTASI_KODE.md  README.md  pyproject.toml  requirements.txt  superexec.Dockerfile
fl-thesis/fl_thesis/: __init__.py  client_app.py  custom_strategy.py  data_exp.ipynb  data_exploration.ipynb  data_split.py  federated_manifest.csv  quantization.py  server_app.py  task.py
fl-thesis/scripts/: test_quant_roundtrip.py
